<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2Doctor">

    <ImageView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="@drawable/nocard_1xxxhdpi"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="12dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:cardElevation="3dp"
        app:cardCornerRadius="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/log">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/Signup"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText

                android:layout_width="0dp"

                android:layout_height="wrap_content"

                android:lines="1"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"

                app:layout_constraintTop_toBottomOf="@id/text"

                app:layout_constraintEnd_toStartOf="@+id/nationalId_register"

                android:id="@+id/nationalId_register_edittext"

                app:layout_constraintEnd_toEndOf="parent"

                tools:text="1234556"



                />

            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"

                android:textSize="20dp"

                android:textColor="@color/colorPrimaryDark"

              app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="7dp"

                android:text="@string/national"

                app:layout_constraintTop_toBottomOf="@id/text"



                android:id="@+id/nationalId_register"



                />
            <EditText

                android:id="@+id/bachelor_edit"

                android:layout_width="0dp"

                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:lines="1"

                android:textSize="16dp"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/nationalId_register_edittext"
                app:layout_constraintEnd_toStartOf="@id/bachelor"


                 />

            <TextView





                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"

                android:textSize="20dp"

                android:textColor="@color/colorPrimaryDark"

               app:layout_constraintEnd_toEndOf="@id/nationalId_register"

                android:text="@string/Bachelor"

                app:layout_constraintTop_toBottomOf="@id/nationalId_register"



                android:id="@+id/bachelor"



                />
            <TextView





                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"

                android:textSize="20dp"

                android:textColor="@color/colorPrimaryDark"

                app:layout_constraintEnd_toEndOf="@id/nationalId_register"

                android:text="@string/special"

                app:layout_constraintTop_toBottomOf="@id/bachelor"



                android:id="@+id/special"



                />
            <CheckBox

                android:id="@+id/sself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sself"
                app:layout_constraintTop_toBottomOf="@id/special"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:textSize="20sp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/ffamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fبfamilyy"
                app:layout_constraintTop_toBottomOf="@id/sself"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/ffriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ffriends"
                app:layout_constraintTop_toBottomOf="@id/ffamily"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/eemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eemo"
                app:layout_constraintTop_toBottomOf="@id/ffriends"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/wwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wwork"
                app:layout_constraintTop_toBottomOf="@id/eemo"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/lloss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lloss"
                app:layout_constraintTop_toBottomOf="@id/wwork"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/ggeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ggeneral"
                app:layout_constraintTop_toBottomOf="@id/lloss"
                app:layout_constraintEnd_toEndOf="@id/bachelor"
                android:button="@null"
                android:textSize="20sp"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onCheckBoxClicked"
                />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="30dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"

                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ggeneral"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>